# Project-Flow-1.0

./: Cargo.toml  README.md  package-lock.json  package.json
backend/: Cargo.toml  chat.db  hash_password.rs
backend/hash_generator/: Cargo.toml
backend/hash_generator/src/: main.rs
backend/src/: main.rs
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: About.tsx  App.css  App.tsx  Home.css  Home.tsx  Login.css  Login.tsx  index.css  index.tsx
frontend/src/components/: AddUserByUsername.css  AddUserByUsername.tsx  ChatRoom.css  ChatRoom.tsx  FindUsers.css  FindUsers.tsx  Friends.css  Friends.tsx  FriendsSuggestions.css  FriendsSuggestions.tsx  PeopleYouMayKnow.css  PeopleYouMayKnow.tsx  Register.css  Register.tsx
frontend/src/services/: api.ts
