[package]
name = "backend"
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
actix-cors = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
argon2 = "0.5"
actix-session = { version = "0.9", features = ["cookie-session"] }

[[bin]]
name = "backend"
path = "src/main.rs"

[workspace]
members = [
    "hash_generator"
]